unpackaged/main/default/objects/Colonia__c/fields/Codigo_PostalLookup__c.field-meta.xml
<CustomField>
    <fullName>Codigo_PostalLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Postal</label>
    <referenceTo>Codigo_Postal__c</referenceTo>
    <relationshipLabel>Colonias</relationshipLabel>
    <relationshipName>Colonias</relationshipName>
    <type>Lookup</type>
</CustomField>