unpackaged/main/default/objects/Colonia__c/fields/Tipo_Asentamiento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Asentamiento__c</fullName>
    <label>Tipo Asentamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aeropuerto</fullName>
            </value>
            <value>
                <fullName>Ampliación</fullName>
            </value>
            <value>
                <fullName>Barrio</fullName>
            </value>
            <value>
                <fullName>Campamento</fullName>
            </value>
            <value>
                <fullName>Ciudad</fullName>
            </value>
            <value>
                <fullName>Club de golf</fullName>
            </value>
            <value>
                <fullName>Colonia</fullName>
            </value>
            <value>
                <fullName>Condominio</fullName>
            </value>
            <value>
                <fullName>Congregación</fullName>
            </value>
            <value>
                <fullName>Conjunto habitacional</fullName>
            </value>
            <value>
                <fullName>Ejido</fullName>
            </value>
            <value>
                <fullName>Equipamiento</fullName>
            </value>
            <value>
                <fullName>Estación</fullName>
            </value>
            <value>
                <fullName>Exhacienda</fullName>
            </value>
            <value>
                <fullName>Finca</fullName>
            </value>
            <value>
                <fullName>Fraccionamiento</fullName>
            </value>
            <value>
                <fullName>Gran usuario</fullName>
            </value>
            <value>
                <fullName>Granja</fullName>
            </value>
            <value>
                <fullName>Hacienda</fullName>
            </value>
            <value>
                <fullName>Ingenio</fullName>
            </value>
            <value>
                <fullName>Paraje</fullName>
            </value>
            <value>
                <fullName>Parque industrial</fullName>
            </value>
            <value>
                <fullName>Poblado comunal</fullName>
            </value>
            <value>
                <fullName>Pueblo</fullName>
            </value>
            <value>
                <fullName>Puerto</fullName>
            </value>
            <value>
                <fullName>Ranchería</fullName>
            </value>
            <value>
                <fullName>Rancho</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Unidad habitacional</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>