unpackaged/main/default/objects/Colonia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Municipio__c</columns>
    <columns>Codigo_Postal__c</columns>
    <columns>Id_Mas_Comercial__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>